# farol-verde

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  variables.env
landing/: farol-dump.sql  manage.py  pyproject.toml  run.sh
landing/blog/: models.py
landing/blog/migrations/: 0001_initial.py  0002_auto_20220713_1444.py  0002_candidate_candidateindexpage.py  0003_alter_blogpost_cover_image.py  0004_alter_blogpost_cover_image.py
landing/candidate/: adhesion.py  builders.py  factories.py  models.py  schemes.py  tests.py  urls.py  util.py
landing/candidate/camara/: adhesion.py  fetcher.py
landing/candidate/csv/: candidates_adhesion_csv.csv  candidatos_tse_2022.csv  depudados.csv  proposicoes_com_tematica_ambiental.csv
landing/candidate/fetchers/: api_camara.py  api_parlametria.py  api_senado.py
landing/candidate/migrations/: 00010_set_social_question_class.py  00011_set_social_question_class.py  0001_initial.py  0002_auto_20220706_1756.py  0002_auto_20220711_1444.py  0002_auto_20220711_1734.py  0003_auto_20220713_1734.py  0003_migrate.py  0004_add_pages_to_menu.py  0004_migrate.py  0005_auto_20220713_1444.py  0005_auto_20220727_2051.py  0005_auto_20220728_1510.py  0005_candidatepage_birth_date.py  0006_auto_20220728_1510.py  0006_candidatepage_party.py  0007_candidatepage_party.py  0008_auto_20220729_1956.py  0009_alter_candidatepage_opinions.py  0009_auto_20220804_1808.py  0009_auto_20220804_2101.py  (+39 more)
landing/home/: models.py  wagtail_hooks.py  wagtailstreamforms_fields.py  wagtailstreamforms_hooks.py
landing/landing/: urls.py  wsgi.py
(+120 files in other folders)
