[tool.poetry]
name = "landing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
wagtail = "^2.16.1"
wagtailfontawesome = "^1.2.1"
wagtail-color-panel = "^1.3.1"
psycopg2 = "^2.9.3"
wagtailstreamforms = "^3.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
